changing the example so it runs our jupyter notebook

--- a/GWs/Dockerfile
+++ b/GWs/Dockerfile
@@ -1,19 +1,26 @@
 FROM python:3.8
 
-# Install dependencies
+# Install Jupyter and other dependencies
+RUN pip install jupyter gwpy pandas
+
+# Install additional system dependencies for GWpy
 RUN apt-get update && apt-get install -y \
     libfftw3-dev \
     libhdf5-dev \
     libgsl-dev
 
-# Install GWpy
-RUN pip install gwpy
+# Install PyTorch
+RUN pip install torch==1.9.0
+#+cpu torchvision==0.10.0+cpu torchaudio==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
 # Set the working directory
-#WORKDIR /app
+WORKDIR /app
 
-# Copy your application code into the container
-COPY . .
+# Copy the notebook into the container
+COPY WaveFormEncoder.ipynb /app/
 
-# Command to run your application
-CMD ["python", "GW_test.py"]
+# Expose the Jupyter notebook port
+EXPOSE 8888
+
+# Command to run Jupyter notebook
+CMD ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root"]
